src/test/ui/feature-gates/feature-gate-trace_macros.stderr
error[E0658]: `trace_macros` is not stable enough for use and is subject to change (see issue #29598)
  --> $DIR/feature-gate-trace_macros.rs:2:5
   |
LL |     trace_macros!(true); //~ ERROR: `trace_macros` is not stable
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(trace_macros)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
